Fix for bug 10173. Attributes that are enumerated values are returned with the first letter upper-cased. R=troy